# gitatlas-cli

./: .release.env  Cargo.toml  README.md
.github/workflows/: ci.yml
Formula/: gitatlas-cli.rb
src/: cache.rs  cli.rs  error.rs  handlers.rs  main.rs  models.rs  output.rs  resolver.rs  scanner.rs  tui.rs
src/git/: detail.rs  discovery.rs  mod.rs  operations.rs  ssh_config.rs  status.rs
