[package]
name = "gitatlas"
version = "0.1.0"
edition = "2021"
description = "Multi-repo Git management CLI (companion to the gitatlas GUI)"
authors = ["Graham"]

[[bin]]
name = "gitatlas"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "cargo"] }
git2 = "0.20"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dirs-next = "2"
anyhow = "1"
comfy-table = "7"
console = "0.16.3"
rayon = "1"
ratatui = "0.30.0"
crossterm = "0.29.0"
ssh2-config = "0.7"
